[gd_scene load_steps=17 format=3 uid="uid://depku8k5m7bvo"]

[ext_resource type="Script" path="res://Scripts/MenuPrincipal.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://8uwakaxxx2yy" path="res://NewSprites/background.png" id="2_1k5lp"]
[ext_resource type="Texture2D" uid="uid://dqic4hqmfbsmi" path="res://TEST/GUI.png" id="3_w631d"]
[ext_resource type="Texture2D" uid="uid://wqoaohd5jk8" path="res://Sprites/GUI.png" id="4"]
[ext_resource type="AudioStream" uid="uid://b2r1f684dog61" path="res://audio/4 Battle Track LOOP TomMusic.ogg" id="6_g7e42"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s173n"]
atlas = ExtResource("3_w631d")
region = Rect2(307, 0, 74, 96)

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("4")
region = Rect2(4, 4, 54, 12)

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource("4")
region = Rect2(4, 29, 54, 12)

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource("4")
region = Rect2(4, 17, 54, 12)

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("4")
region = Rect2(64, 4, 58, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fvaw"]
atlas = ExtResource("4")
region = Rect2(63.8911, 28.7964, 58.1089, 12.2036)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpo2r"]
atlas = ExtResource("4")
region = Rect2(64, 17, 58, 12)

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource("4")
region = Rect2(188, 4, 48, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_bodfl"]
atlas = ExtResource("4")
region = Rect2(188, 29, 48, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dxho"]
atlas = ExtResource("4")
region = Rect2(188, 17, 48, 12)

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource("4")
region = Rect2(4, 132, 128, 79)

[node name="MenuPrincipal" type="CanvasLayer"]
script = ExtResource("1")

[node name="background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_1k5lp")
expand_mode = 1

[node name="UI" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="botones" type="TextureRect" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.0
offset_top = -160.0
offset_right = 37.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("AtlasTexture_s173n")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="UI/botones"]
layout_mode = 0
offset_left = 8.0
offset_top = 14.0
offset_right = 66.0
offset_bottom = 82.0
theme_override_constants/separation = 16

[node name="nuevaPartida_btn" type="TextureButton" parent="UI/botones/VBoxContainer"]
layout_mode = 2
texture_normal = SubResource("2")
texture_pressed = SubResource("6")
texture_hover = SubResource("7")
stretch_mode = 3

[node name="cargarPartida_btn" type="TextureButton" parent="UI/botones/VBoxContainer"]
layout_mode = 2
texture_normal = SubResource("3")
texture_pressed = SubResource("AtlasTexture_7fvaw")
texture_hover = SubResource("AtlasTexture_fpo2r")
stretch_mode = 3

[node name="salir_btn" type="TextureButton" parent="UI/botones/VBoxContainer"]
layout_mode = 2
texture_normal = SubResource("4")
texture_pressed = SubResource("AtlasTexture_bodfl")
texture_hover = SubResource("AtlasTexture_5dxho")
stretch_mode = 3

[node name="logo" type="TextureRect" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -168.0
offset_right = 64.0
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("5")

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_g7e42")
autoplay = true

[connection signal="pressed" from="UI/botones/VBoxContainer/nuevaPartida_btn" to="." method="_on_nuevaPartida_btn_pressed"]
[connection signal="pressed" from="UI/botones/VBoxContainer/cargarPartida_btn" to="." method="_on_cargar_partida_btn_pressed"]
[connection signal="pressed" from="UI/botones/VBoxContainer/salir_btn" to="." method="_on_salir_btn_pressed"]
